Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#2339 closed bug (fixed)

Can't exit "Haiku" screensaver (25802)

Reported by: dustin howett Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/ScreenSaver Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I went to the screensaver pref panel and clicked "Test" with the haiku screensaver selected. The screensaver started up, but I could not exit it via the mouse or the keyboard. Had to drop into KDL, drop the team to the user debugger, and terminate it from there.

GCC4 main build, hybrid with gcc2.

Change History (6)

comment:1 by stippi, 16 years ago

I think the reason for this one is that the screen saver runner thread (the one that animates the screen saver) has a wrong mechanism for waiting for the next frame. It will go to sleep until the next frame is due. In the case of the Haiku screen saver, there is a long time between frames, which makes it appear to not be "exitable". IIRC, if you wait long enough, the desktop reappears.

comment:2 by leavengood, 16 years ago

Owner: changed from axeld to leavengood
Status: newassigned

I have this same problem with my Message screen saver (but worse, since the tick time is 30 seconds), so I am going to fix this (and other screen saver issues.)

comment:3 by leavengood, 16 years ago

Owner: changed from leavengood to anevilyak
Status: assignednew

Re-assigning to Rene since he wanted to take a look at this and he has more time than me right now :)

comment:4 by anevilyak, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28777.

comment:5 by dustin howett, 16 years ago

The screensaver now exits quickly, as intended, but "Haiku" jumps about the screen very, very quickly.

comment:6 by dustin howett, 16 years ago

Created #3211 for my last issue as to let this ticket die in peace.

Note: See TracTickets for help on using tickets.