Break up the screen saver update interval into 50 msec ticks. This lets us quickly evaluate if it's time to exit the screen saver, which would previously have blocked until the tick interval was up. This fixes ticket #2339.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28777 a95241bf-73f2-0310-859d-f6bbb57e9c96